tests/neg/toplevel-cyclic/moredefs_1.scala
type B = A // error: recursion limit exceeded
